# docs/swagger/swagger.yaml
@@ -336,7 +336,7 @@ paths: # TODO 変数の命名を確認する
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/TraqMe"
+                $ref: "#/components/schemas/TraqUser"
         "404":
           description: 対象ユーザーが見つかりませんでした
         "500":
@@ -1149,18 +1149,6 @@ components:
       required:
         - id
         - name
-    TraqMe:
-      type: object
-      properties:
-        id:
-          type: string
-          description: traQ ID
-        uuid:
-          type: string
-          format: uuid
-      required:
-        - id
-        - uuid
     TraqGroups:
       type: array
       items:
