# openapi/types.go
@@ -1,6 +1,6 @@
 // Package openapi provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
 package openapi
 
 import (
@@ -671,13 +671,6 @@ type TraqGroups = []TraqGroup
 
 // TraqId traQ ID
 type TraqId = string
-
-// TraqMe defines model for TraqMe.
-type TraqMe struct {
-	// Id traQ ID
-	Id   string             `json:"id"`
-	Uuid openapi_types.UUID `json:"uuid"`
-}
 
 // TraqStamp defines model for TraqStamp.
 type TraqStamp struct {
